Changes made in overall website
Major changes has been made on overall website.

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                                             </a>
                                             <div style="font-size: 12px; margin-left:14px;margin-top:10px;">Hello, Deploy CRM app into UAT</div> 
                                             <a target="_self" class="dropdown-item"
-                                            href="#" style=" text-align: center;">
+                                            href="product/dessa.html" style=" text-align: center;">
                                              <div style="text-align: left; border-radius: 8px; width: 200px;">
                                                 <i class="fa-regular fa-star"  style="color: #00c8ff; font-size: 20px; margin-bottom: 10px;"></i>
                                                 <div class="drop-title">DeSSA</div>
@@ -283,7 +283,7 @@
                                         <div class="dropdown-grid-item bg-white" >           
                                             <div style="font-size: 12px; margin-left:14px;">Greater visibility to CICD</div>                                                                                                                    
                                             <a target="_self" class="dropdown-item"
-                                            href="#" style="text-align: center;">
+                                            href="product/agile-prog-mgmt.html" style="text-align: center;">
                                              <div style="text-align: left; border-radius: 8px; width: 200px;">
                                                 <i class="fa-solid fa-bars-progress" style="color: #01b522; font-size: 20px; margin-bottom: 10px;"></i>
                                                 <div class="logo-color drop-title">Agile Project Mgmt</div>
@@ -294,7 +294,7 @@
                                             </a>
                                             <div style="font-size: 12px; margin-left:14px; margin-top:10px;">Tailored IDP for Talend Qlik</div> 
                                             <a target="_self" class="dropdown-item"
-                                            href="#" style=" text-align: center;">
+                                            href="product/talend-qlik.html" style=" text-align: center;">
                                              <div style="text-align: left; border-radius: 8px; width: 200px;">
                                                 <i class="fa-solid fa-laptop-medical" style="color: #FE6266; font-size: 20px; margin-bottom: 10px;"></i>
                                                 <div class="drop-title">Talend Qlik</div>
@@ -547,7 +547,7 @@
                                 data-bs-title="Light"><i class="flaticon-sun-1 fs-lg"></i></div>
                             <div class="tt-theme-dark" data-bs-toggle="tooltip" data-bs-placement="left"
                                 data-bs-title="Dark"><i class="flaticon-moon-1 fs-lg"></i></div>
-                        </a> <a href="https://web.devozy.ai/" target="_blank"
+                        </a> <a href="https://web.devozy.ai/" target="_self"
                             class="btn btn-link text-decoration-none me-2">Login</a>
                        <!--<a href="request-demo.html" class="btn btn-primary" target="_blank">Get Devozy Free</a> -->
                         <button onclick="window.location.href='request-demo.html'" name="getdevozyfree" type="submit" class="btn btn-primary">Get Started
@@ -633,7 +633,7 @@
                                 <div class="dropdown-grid rounded-custom width-full-3" >
                                     <div class="dropdown-grid-item bg-white" >            
                                         <div style="font-size: 12px; margin-left:14px">A Shift from DevOps to DevEx</div>
-                                        <a target="_blank" class="dropdown-item"
+                                        <a target="_self" class="dropdown-item"
                                         href="#" style="text-align: center;">
                                          <div style="text-align: left; border-radius: 8px; width: 200px;">
                                             <i class="fa-solid fa-infinity" style="color: #0011ff82; font-size: 20px; margin-bottom: 10px;"></i>
@@ -645,7 +645,7 @@
                                         </div>
                                         </a>
                                         <div style="font-size: 12px; margin-left:14px;margin-top:10px;">Hello, Deploy CRM app into UAT</div> 
-                                        <a target="_blank" class="dropdown-item"
+                                        <a target="_self" class="dropdown-item"
                                         href="#" style=" text-align: center;">
                                          <div style="text-align: left; border-radius: 8px; width: 200px;">
                                             <i class="fa-regular fa-star"  style="color: #00c8ff; font-size: 20px; margin-bottom: 10px;"></i>
@@ -659,7 +659,7 @@
                                     </div>
                                     <div class="dropdown-grid-item bg-white" >           
                                         <div style="font-size: 12px; margin-left:14px;">Greater visibility to CICD</div>                                                                                                                    
-                                        <a target="_blank" class="dropdown-item"
+                                        <a target="_self" class="dropdown-item"
                                         href="#" style="text-align: center;">
                                          <div style="text-align: left; border-radius: 8px; width: 200px;">
                                             <i class="fa-solid fa-bars-progress" style="color: #01b522; font-size: 20px; margin-bottom: 10px;"></i>
@@ -670,7 +670,7 @@
                                         </div>
                                         </a>
                                         <div style="font-size: 12px; margin-left:14px; margin-top:10px;">Tailored IDP for Talend Qlik</div> 
-                                        <a target="_blank" class="dropdown-item"
+                                        <a target="_self" class="dropdown-item"
                                         href="#" style=" text-align: center;">
                                          <div style="text-align: left; border-radius: 8px; width: 200px;">
                                             <i class="fa-solid fa-laptop-medical" style="color: #FE6266; font-size: 20px; margin-bottom: 10px;"></i>
@@ -1010,7 +1010,7 @@
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
                                             <div class="single-logo">
-                                                <img src="RMtech-logo.svg" class="img-fluid mt-2" height="30" alt="logo">
+                                                <img src="RMtech-logo.svg" class="img-fluid " height="30" alt="logo">
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
@@ -1023,17 +1023,17 @@
                                                 <img src="nippon-logo.svg" class="img-fluid" alt="logo" height="30">
                                             </div>
                                         </div>
+                                        <div class="swiper-slide">
+                                            <div class="single-logo">
+                                                <img src="vs-infotech-logo.svg" class="img-fluid" alt="logo" height="30">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <div class="single-logo">
+                                                <img src="cyber-vault-logo.svg" class="img-fluid" alt="logo" height="30">
+                                            </div>
+                                        </div>
                                         <!-- <div class="swiper-slide">
-                                            <div class="single-logo">
-                                                <img src="assets/img/brand-logo/printerest.svg" class="img-fluid" alt="logo" height="30">
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <div class="single-logo">
-                                                <img src="assets/img/brand-logo/webflow.svg" class="img-fluid" alt="logo" height="30">
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide">
                                             <div class="single-logo">
                                                 <img src="assets/img/brand-logo/company.svg" class="img-fluid" alt="logo" height="30">
                                             </div>
@@ -2570,8 +2570,8 @@
         <!-- Newsletter Start -->
         <section class="digi-news-letter ah-bg ">
             <div class="container">
-                <!-- <div class="bg-white text-light rounded-custom p-4 p-md-5 p-lg-5"> -->
-                    <!-- <div class="row align-items-center"> -->
+                <div class="bg-white text-light rounded-custom p-4 p-md-5 p-lg-5">
+                    <div class="row align-items-center">
                         <!-- <div class="col-lg-12 col-md-12">
                             <div class="digi-newsletter">
                                 <div>
@@ -2592,18 +2592,18 @@
                                 </form>
                             </div>
                         </div> -->
-                        <div class="col-lg-12 col-md-12">
+                        <div class="col-lg-12 col-md-12 mt-4">
                             <div class="dg-news-img text-end">
                                 <img src="traditional-dev.svg" class="img-fluid text-end" alt="pie">
                             </div>
                         </div>
-                        <div class="col-lg-12 col-md-12">
+                        <div class="col-lg-12 col-md-12 mt-4">
                             <div class="dg-news-img text-end">
                                 <img src="devozy-dev.svg" class="img-fluid text-end" alt="pie">
                             </div>
                         </div>
-                    <!-- </div> -->
-                <!-- </div> -->
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Newsletter End -->
