--- a/product/agile-prog-mgmt.html
+++ b/product/agile-prog-mgmt.html
@@ -631,7 +631,7 @@
                                     <div class="img-bg-shape position-absolute">
                                         <!-- <img src="../assets/img/integations/shape.svg" alt="integations"> -->
                                     </div>
-                                    <img src="../modernize-illustration.png" class="img-fluid  rounded-custom shadow-lg" alt="softtent">
+                                    <img src="../agilepm-illustration.png" class="img-fluid  rounded-custom shadow-lg" alt="softtent">
                                 </div>
                             </div>
                         </div>
