--- a/product/dessa.html
+++ b/product/dessa.html
@@ -626,7 +626,7 @@
                                     <div class="img-bg-shape position-absolute">
                                         <!-- <img src="../assets/img/integations/shape.svg" alt="integations"> -->
                                     </div>
-                                    <img src="../modernize-illustration.png" class="img-fluid  rounded-custom shadow-lg" alt="softtent">
+                                    <img src="../dessa-illustration.png" class="img-fluid  rounded-custom shadow-lg" alt="softtent">
                                 </div>
                             </div>
                         </div>
