--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
                                     <div class="dropdown-grid-item bg-white" >            
                                         <div style="font-size: 12px; margin-left:14px">A Shift from DevOps to DevEx</div>
                                         <a target="_self" class="dropdown-item"
-                                        href="#" style="text-align: center;">
+                                        href="product/modernize-devops.html" style="text-align: center;">
                                          <div style="text-align: left; border-radius: 8px; width: 200px;">
                                             <i class="fa-solid fa-infinity" style="color: #0011ff82; font-size: 20px; margin-bottom: 10px;"></i>
                                             <div class="logo-color drop-title">Mordernize Devops</div>
@@ -646,7 +646,7 @@
                                         </a>
                                         <div style="font-size: 12px; margin-left:14px;margin-top:10px;">Hello, Deploy CRM app into UAT</div> 
                                         <a target="_self" class="dropdown-item"
-                                        href="#" style=" text-align: center;">
+                                        href="product/dessa.html" style=" text-align: center;">
                                          <div style="text-align: left; border-radius: 8px; width: 200px;">
                                             <i class="fa-regular fa-star"  style="color: #00c8ff; font-size: 20px; margin-bottom: 10px;"></i>
                                             <div class="drop-title">DeSSA</div>
@@ -660,7 +660,7 @@
                                     <div class="dropdown-grid-item bg-white" >           
                                         <div style="font-size: 12px; margin-left:14px;">Greater visibility to CICD</div>                                                                                                                    
                                         <a target="_self" class="dropdown-item"
-                                        href="#" style="text-align: center;">
+                                        href="product/agile-prog-mgmt.html" style="text-align: center;">
                                          <div style="text-align: left; border-radius: 8px; width: 200px;">
                                             <i class="fa-solid fa-bars-progress" style="color: #01b522; font-size: 20px; margin-bottom: 10px;"></i>
                                             <div class="logo-color drop-title">Agile Project Mgmt</div>
@@ -671,7 +671,7 @@
                                         </a>
                                         <div style="font-size: 12px; margin-left:14px; margin-top:10px;">Tailored IDP for Talend Qlik</div> 
                                         <a target="_self" class="dropdown-item"
-                                        href="#" style=" text-align: center;">
+                                        href="product/talend-qlik.html" style=" text-align: center;">
                                          <div style="text-align: left; border-radius: 8px; width: 200px;">
                                             <i class="fa-solid fa-laptop-medical" style="color: #FE6266; font-size: 20px; margin-bottom: 10px;"></i>
                                             <div class="drop-title">Talend Qlik</div>
@@ -2594,12 +2594,12 @@
                         </div> -->
                         <div class="col-lg-12 col-md-12 mt-4">
                             <div class="dg-news-img text-end">
-                                <img src="traditional-dev.svg" class="img-fluid text-end" alt="pie">
+                                <img src="traditional-devops.svg" class="img-fluid text-end" alt="pie">
                             </div>
                         </div>
                         <div class="col-lg-12 col-md-12 mt-4">
                             <div class="dg-news-img text-end">
-                                <img src="devozy-dev.svg" class="img-fluid text-end" alt="pie">
+                                <img src="devozy-flow.svg" class="img-fluid text-end" alt="pie">
                             </div>
                         </div>
                     </div>
