--- a/index.html
+++ b/index.html
@@ -1033,11 +1033,11 @@
                                                 <img src="cyber-vault-logo.svg" class="img-fluid" alt="logo" height="30">
                                             </div>
                                         </div>
-                                        <!-- <div class="swiper-slide">
+                                        <div class="swiper-slide">
                                             <div class="single-logo">
-                                                <img src="assets/img/brand-logo/company.svg" class="img-fluid" alt="logo" height="30">
+                                                <img src="intoleads-logo.svg" class="img-fluid" alt="logo" height="30">
                                             </div>
-                                        </div> -->
+                                        </div>
                                     </div>
                                 </div>
                             </div>
