--- a/request-demo.html
+++ b/request-demo.html
@@ -130,7 +130,7 @@
                                             </a>
                                             <div style="font-size: 12px; margin-left:14px;margin-top:10px;">Hello, Deploy CRM app into UAT</div> 
                                             <a target="_self" class="dropdown-item"
-                                            href="#" style=" text-align: center;">
+                                            href="product/dessa.html" style=" text-align: center;">
                                              <div style="text-align: left; border-radius: 8px; width: 200px;">
                                                 <i class="fa-regular fa-star"  style="color: #00c8ff; font-size: 20px; margin-bottom: 10px;"></i>
                                                 <div class="drop-title">DeSSA</div>
@@ -144,7 +144,7 @@
                                         <div class="dropdown-grid-item bg-white" >           
                                             <div style="font-size: 12px; margin-left:14px;">Greater visibility to CICD</div>                                                                                                                    
                                             <a target="_self" class="dropdown-item"
-                                            href="#" style="text-align: center;">
+                                            href="product/agile-prog-mgmt.html" style="text-align: center;">
                                              <div style="text-align: left; border-radius: 8px; width: 200px;">
                                                 <i class="fa-solid fa-bars-progress" style="color: #01b522; font-size: 20px; margin-bottom: 10px;"></i>
                                                 <div class="logo-color drop-title">Agile Project Mgmt</div>
@@ -155,7 +155,7 @@
                                             </a>
                                             <div style="font-size: 12px; margin-left:14px; margin-top:10px;">Tailored IDP for Talend Qlik</div> 
                                             <a target="_self" class="dropdown-item"
-                                            href="#" style=" text-align: center;">
+                                            href="product/talend-qlik.html" style=" text-align: center;">
                                              <div style="text-align: left; border-radius: 8px; width: 200px;">
                                                 <i class="fa-solid fa-laptop-medical" style="color: #FE6266; font-size: 20px; margin-bottom: 10px;"></i>
                                                 <div class="drop-title">Talend Qlik</div>
@@ -383,7 +383,7 @@
                                         </a>
                                         <div style="font-size: 12px; margin-left:14px;margin-top:10px;">Hello, Deploy CRM app into UAT</div> 
                                         <a target="_self" class="dropdown-item"
-                                        href="#" style=" text-align: center;">
+                                        href="product/dessa.html" style=" text-align: center;">
                                          <div style="text-align: left; border-radius: 8px; width: 200px;">
                                             <i class="fa-regular fa-star"  style="color: #00c8ff; font-size: 20px; margin-bottom: 10px;"></i>
                                             <div class="drop-title">DeSSA</div>
@@ -397,7 +397,7 @@
                                     <div class="dropdown-grid-item bg-white" >           
                                         <div style="font-size: 12px; margin-left:14px;">Greater visibility to CICD</div>                                                                                                                    
                                         <a target="_self" class="dropdown-item"
-                                        href="#" style="text-align: center;">
+                                        href="product/agile-prog-mgmt.html" style="text-align: center;">
                                          <div style="text-align: left; border-radius: 8px; width: 200px;">
                                             <i class="fa-solid fa-bars-progress" style="color: #01b522; font-size: 20px; margin-bottom: 10px;"></i>
                                             <div class="logo-color drop-title">Agile Project Mgmt</div>
@@ -408,7 +408,7 @@
                                         </a>
                                         <div style="font-size: 12px; margin-left:14px; margin-top:10px;">Tailored IDP for Talend Qlik</div> 
                                         <a target="_self" class="dropdown-item"
-                                        href="#" style=" text-align: center;">
+                                        href="product/talend-qlik.html" style=" text-align: center;">
                                          <div style="text-align: left; border-radius: 8px; width: 200px;">
                                             <i class="fa-solid fa-laptop-medical" style="color: #FE6266; font-size: 20px; margin-bottom: 10px;"></i>
                                             <div class="drop-title">Talend Qlik</div>
