updated MS clarity
updated MS clarity

--- a/request-demo.html
+++ b/request-demo.html
@@ -9,6 +9,17 @@
             'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
             })(window,document,'script','dataLayer','GTM-W4RR424D');</script>
     <!-- End Google Tag Manager -->
+
+     <!-- Microsoft Clarity Tag Manager -->
+     <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "qkkwjv6yim");
+    </script>
+    <!-- End Microsoft Clarity Tag Manager -->
+
     <!--required meta tags-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -644,6 +655,10 @@
                                                     
                                                     <option value="+91">+91 (India)</option>
                                                     <option value="+1">+1 (USA)</option>
+                                                    <option value="+65">+65 (Singapore)</option>
+                                                    <option value="+44">+44 (United Kingdom)</option>
+                                                    <option value="+61">+61 (Australia)</option>
+                                                    <option value="+64">+64 (New Zealand)</option>
                                                     <option value="+7">+7 (Russia)</option>
                                                     <option value="+20">+20 (Egypt)</option>
                                                     <option value="+27">+27 (South Africa)</option>
@@ -656,8 +671,7 @@
                                                     <option value="+39">+39 (Italy)</option>
                                                     <option value="+40">+40 (Romania)</option>
                                                     <option value="+41">+41 (Switzerland)</option>
-                                                    <option value="+43">+43 (Austria)</option>
-                                                    <option value="+44">+44 (United Kingdom)</option>
+                                                    <option value="+43">+43 (Austria)</option>                                                   
                                                     <option value="+45">+45 (Denmark)</option>
                                                     <option value="+46">+46 (Sweden)</option>
                                                     <option value="+47">+47 (Norway)</option>
@@ -671,12 +685,9 @@
                                                     <option value="+56">+56 (Chile)</option>
                                                     <option value="+57">+57 (Colombia)</option>
                                                     <option value="+58">+58 (Venezuela)</option>
-                                                    <option value="+60">+60 (Malaysia)</option>
-                                                    <option value="+61">+61 (Australia)</option>
+                                                    <option value="+60">+60 (Malaysia)</option>                                                   
                                                     <option value="+62">+62 (Indonesia)</option>
-                                                    <option value="+63">+63 (Philippines)</option>
-                                                    <option value="+64">+64 (New Zealand)</option>
-                                                    <option value="+65">+65 (Singapore)</option>
+                                                    <option value="+63">+63 (Philippines)</option>                                                                                                        
                                                     <option value="+66">+66 (Thailand)</option>
                                                     <option value="+81">+81 (Japan)</option>
                                                     <option value="+82">+82 (South Korea)</option>
@@ -692,7 +703,7 @@
                                                     <!-- Add more country codes as needed -->
                                                 </select>
                                             </div>
-                                            <input type="text" id="number" name="number" class="form-control" placeholder="Phone Number" aria-label="Phone Number" style="margin-left:8px">
+                                            <input type="text" id="number" name="number" class="form-control" placeholder="Phone Number (Optional)" aria-label="Phone Number" style="margin-left:8px">
                                         </div>
                                     
                                     <div class="col-12">
