footer changes, ms clarity
AM updates

--- a/index.html
+++ b/index.html
@@ -2945,9 +2945,9 @@
                                     <img src="yozy.png" height="36" width="113" alt="logo" class="img-fluid logo-white">
                                     <img src="yozy.png" height="36" width="113" alt="logo" class="img-fluid logo-color">
                                 </div>
-                                <p>At YOZY, we're IT consulting experts in Cloud, DevOps, and Cyber Security. Our
-                                    strengths: agile software development, advanced ITSM tools. We innovate to empower
-                                    businesses in a dynamic tech world.</p>
+                                <p>🚀 At Yozy Technologies, we specialize in professional consulting and implementation services around DevOps, Multi-cloud and AI-driven application development, helping businesses scale faster, reduce costs, and enhance efficiency.</p>
+
+                                <p>Building a world class 'AI assisted' Self Service Platform enable instant software delivery to multi-cloud environments from day 1. Improving 5x developer's productivity and reducing 10x IT project cost.</p>
 
                                     <a href="https://www.producthunt.com/posts/devozy-ai?embed=true&utm_source=badge-featured&utm_medium=badge&utm_souce=badge-devozy&#0045;ai" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=510883&theme=light" alt="Devozy&#0046;ai - A&#0032;self&#0045;service&#0032;platform&#0032;for&#0032;Developers&#0044;&#0032;IT&#0032;Engineering&#0032;teams | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
 
