--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -2,6 +2,23 @@
 <html lang="en" data-bs-theme="light">
 
 <head>
+              <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-W4RR424D');</script>
+    <!-- End Google Tag Manager -->
+    <!-- Microsoft Clarity Tag Manager -->
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "qkkwjv6yim");
+    </script>
+    <!-- End Microsoft Clarity Tag Manager -->
+     
     <!--required meta tags-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -852,9 +869,7 @@
                                     <img src="../yozy.png" height="36" width="113" alt="logo" class="img-fluid logo-white">
                                     <img src="../yozy.png" height="36" width="113" alt="logo" class="img-fluid logo-color">
                                 </div>
-                                <p>At YOZY, we're IT consulting experts in Cloud, DevOps, and Cyber Security. Our
-                                    strengths: agile software development, advanced ITSM tools. We innovate to empower
-                                    businesses in a dynamic tech world.</p>
+                              
 
                                     <a href="https://www.producthunt.com/posts/devozy-ai?embed=true&utm_source=badge-featured&utm_medium=badge&utm_souce=badge-devozy&#0045;ai" target="_self"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=510883&theme=light" alt="Devozy&#0046;ai - A&#0032;self&#0045;service&#0032;platform&#0032;for&#0032;Developers&#0044;&#0032;IT&#0032;Engineering&#0032;teams | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
 
