--- a/product/talend-qlik.html
+++ b/product/talend-qlik.html
@@ -2,6 +2,24 @@
 <html lang="en" data-bs-theme="light">
 
 <head>
+
+          <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-W4RR424D');</script>
+    <!-- End Google Tag Manager -->
+    <!-- Microsoft Clarity Tag Manager -->
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "qkkwjv6yim");
+    </script>
+    <!-- End Microsoft Clarity Tag Manager -->
+     
     <!--required meta tags-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -577,7 +595,8 @@
                     <div class="row">
                         <div class="col-lg-8 col-md-12">
                             <h1 class="display-5 fw-bold">Talend Qlik</h1>
-                            <p class="lead"> Say Goodbye to Manual Talend Qlik Deployments! Seamless integration with Talend Qlik Cloud and TAC. </p>
+                            <p class="lead"> We Yozy Techlabs is a leading DevOps/Multicloud Automation Services company, and our flagship product, Devozy.ai, is a self-service developer platform that automates the build and deployment (CI/CD) of Qlik Talend jobs and Camel routes—making the process simpler and faster through ready-made automations.
+                                Say Goodbye to Manual Talend Qlik Deployments! Seamless integration with Talend Qlik Cloud and TAC. </p>
                         </div>
                     </div>
                     <div class="bg-circle rounded-circle circle-shape-3 position-absolute bg-dark-light right-5"></div>
@@ -593,9 +612,9 @@
                                 <div class="section-heading mb-5">
                                     <h2>Tailored IDP for Talend Qlik</h2>
                                     <!-- <h5>Shifting the Focus to Developer-Centric IT Operations</h5> -->
-                                    <p>Say goodbye to manual Talend Qlik deployments with Devozy.ai’s seamless integration with Talend Qlik Cloud and TAC.</p>
+                                    <p>Devozy.ai self-service platform empowers Qlik Talend developers to deploy Talend code instantly and publish jobs to Talend Cloud/TAC from day one. Our platform seamlessly integrates with Nexus, GitHub, and SonarQube, enabling developers to execute deployments in just a few clicks via the Devozy.ai web console. This fully automated process eliminates manual steps, boosting developer productivity by up to 5x and reducing project costs by up to 10x.</p>
                                 </div>
-                                <ul>
+                                <!--<ul>
                                     <li><strong>Automated Deployments:</strong> Simplifies workflows with pre-configured pipelines.</li>
                                     <li><strong>Error-Free Integration:</strong> Handles Talend Qlik Cloud processes efficiently.</li>
                                     <li><strong>Real-Time Monitoring:</strong> Tracks job performance and resource usage.</li>
@@ -606,6 +625,16 @@
                                     <li><strong>Security Features:</strong> Maintains data integrity and compliance standards.</li>
                                     <li><strong>Custom Automation Scripts:</strong> Tailored solutions for unique use cases.</li>
                                     <li><strong>Enhanced Collaboration:</strong> Streamlines communication between teams managing Talend workflows.</li>
+                                  </ul>-->
+                                  <ul>
+                                    <ul>
+                                        <li><strong>🚀 Accelerate Qlik Talend Jobs Delivery:</strong> Modernize your Qlik Talend job delivery process to boost ROI and drive business growth with faster, more efficient deployments. <strong>Track Deployment Time:</strong> Monitor deployment duration for faster cycles and optimized time-to-market.</li>
+                                        <li><strong>🔒 Risk-Free Deployments:</strong> Deploy Talend job changes with confidence—enabling multiple daily deployments in an agile environment, from day one. <strong>Deployment Success Rate:</strong> Measure the percentage of successful deployments versus failed ones for continuous improvements.</li>
+                                        <li><strong>⚙ No DevOps Expertise Required:</strong> Eliminate the need for specialized DevOps or Talend infrastructure knowledge. <strong>Time Spent on Deployment Configuration:</strong> Reduce the time needed for manual configurations by tracking automation implementation progress.</li>
+                                        <li><strong>♻ Reusable Solutions:</strong> Free up Talend developers to focus on core job development by automating routine deployment tasks. <strong>Automation Efficiency:</strong> Track the reduction in manual tasks and the increase in automation efficiency to measure performance gains.</li>
+                                        <li><strong>💡 Enhanced Developer Experience:</strong> Boost productivity, collaboration, and visibility around Qlik Talend Infra & build deployment process. <strong>Developer Feedback on Deployment Speed:</strong> Gather insights from developers on deployment speed and improve user experience accordingly.</li>
+                                        <li><strong>✅ Reliable Operations:</strong> Our AI assistant proactively monitors CI/CD jobs to ensure a near-zero failure rate. <strong>CI/CD Job Timing and Success Metrics:</strong> Track deployment cycle time, job duration, and frequency of failures to ensure consistent performance and reliability.</li>
+                                    </ul>
                                   </ul>
                                 <!-- <div class="single-feature d-flex mb-4">
                                     <span class="fas fa-bezier-curve fa-2x text-primary"></span>
@@ -651,9 +680,10 @@
                                     <img src="../yozy.png" height="36" width="113" alt="logo" class="img-fluid logo-white">
                                     <img src="../yozy.png" height="36" width="113" alt="logo" class="img-fluid logo-color">
                                 </div>
-                                <p>At YOZY, we're IT consulting experts in Cloud, DevOps, and Cyber Security. Our
-                                    strengths: agile software development, advanced ITSM tools. We innovate to empower
-                                    businesses in a dynamic tech world.</p>
+                                <p>🚀 At Yozy Technologies, we specialize in professional consulting and implementation services around DevOps, Multi-cloud and AI-driven application development, helping businesses scale faster, reduce costs, and enhance efficiency.</p>
+
+                                <p>Building a world class 'AI assisted' Self Service Platform enable instant software delivery to multi-cloud environments from day 1. Improving 5x developer's productivity and reducing 10x IT project cost.</p>
+
 
                                     <a href="https://www.producthunt.com/posts/devozy-ai?embed=true&utm_source=badge-featured&utm_medium=badge&utm_souce=badge-devozy&#0045;ai" target="_self"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=510883&theme=light" alt="Devozy&#0046;ai - A&#0032;self&#0045;service&#0032;platform&#0032;for&#0032;Developers&#0044;&#0032;IT&#0032;Engineering&#0032;teams | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
 
