Hero page improvements

--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -318,7 +318,7 @@
                                             </div>
                                         </div>
                                     </li>
-                        <li><a href="#" class="nav-link">Pricing</a></li>
+                        <li><a href="#" class="nav-link">Plan</a></li>
                     </ul>
 
 
@@ -575,7 +575,7 @@
                                         </div>
                                     </div>
                                 </li>
-                    <li><a href="#" class="nav-link">Pricing</a></li>
+                    <li><a href="#" class="nav-link">Plan</a></li>
                 </ul>
 
                 <div class="action-btns mt-4 ps-3">
@@ -593,7 +593,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-8 col-md-12">
-                            <h1 class="display-5 fw-bold">Price Suit to Your Business</h1>
+                            <h1 class="display-5 fw-bold">Plan Suit to Your Business</h1>
                             <p class="lead">Choose the pricing plan that fits your business needs and budget</p>
                         </div>
                     </div>
@@ -900,7 +900,7 @@
                                             <li><a href="#premium_devozy_feature"
                                                     class="text-decoration-none">Features</a></li>
                                             <li><a href="#devozy" class="text-decoration-none">Devozy</a></li>
-                                            <li><a href="#Pricing" class="text-decoration-none">Pricing</a></li>
+                                            <li><a href="#Pricing" class="text-decoration-none">Plan</a></li>
                                             <li><a href="#review" class="text-decoration-none">Testimonial</a>
                                             </li>
                                             <li><a href="request-demo.html" class="text-decoration-none">Get free
