--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@ No DevOps. No Scripts. Just Click & Deploy.
                                     Start your Free Trial →
                                 </a> -->
                                 <a href="request-demo.html" class="btn btn-white-gradient">
-  🚀 Start your Free Trial →
+  🚀 Start your Free Subscription →
 </a>
 
                             </div>
@@ -813,10 +813,10 @@ No DevOps. No Scripts. Just Click & Deploy.
                             <div class="animated-features">
                                 <div class="animated-feature-wrapper">
                                     <div class="animated-feature delay-1">🚀 Accelerate Qlik Talend DevOps and Upgrades</div>
-                                    <div class="animated-feature delay-2">🔒 Risk-Free Deployments</div>
+                                    <div class="animated-feature delay-2">🔒 Risk-Free Deployments - Confidently ship from day 1</div>
                                     <div class="animated-feature delay-3">⚙️ No DevOps Expertise Required</div>
-                                    <div class="animated-feature delay-4">♻️ Reusable Solutions</div>
-                                    <div class="animated-feature delay-5">✅ Reliable Operations</div>
+                                    <div class="animated-feature delay-4">♻️ Reusable Solutions - Automate the boring repeating tasks</div>
+                                    <div class="animated-feature delay-5">✅ Reliable Operations - Ensure a near-zero failure rate</div>
                                   </div>                                  
                               </div>
                               
